[package]
name = "ff_opt"
version = "0.14.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Blake Hou <skipjack8@live.com>"]
description = "Library for building and interfacing with finite fields"
homepage = "https://github.com/skipjack8/ff_opt"
license = "MIT/Apache-2.0"
repository = "https://github.com/skipjack8/ff_opt"
edition = "2018"
exclude = [
    "ff_derive_const",
    "tester",
    "asm_tester"
]

[dependencies]
byteorder = "1"
rand = "0.4"
#ff_derive_ce = { version = "0.10.*", optional = true }
ff_derive_ce = { path = "ff_derive", optional = true }
hex = {version = "0.4"}

[features]
default = []
derive = ["ff_derive_ce"]
asm_derive = ["derive", "ff_derive_ce/asm"]
